--- a/index.html
+++ b/index.html
@@ -5,41 +5,135 @@
     <title>Assignment 1</title>
 </head>
 <body>
-<div class="container">
-    <div class="banner_area">
-        <img src="image/Banner.png" alt="Snow" style="width:100%;">
-        <div class="overlay"></div>
-        <div class="banner_text">
-            <h6>Happy New Year</h6>
-            <h2>New Year Party Celebration</h2>
-        </div>
-    </div>
-    <div class="discount_area">
-        <h2>65% OFF</h2>
-        <p>Our Holiday Deals Are Better</p>
-        <h4>All Categories</h4>
-        <img src="image/New%20Year%20Photo.png">
-    </div>
-    <div class="section3">
-        <img src="image/Vectorrr.png">
-        <div class="overlay"></div>
-        <div class="content-wrapper">
-            <div class="textarea">
-                <h2>Welcome to <br> midnight party</h2>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            </div>
-            <div class="yearArea">
-                <img src="image/Group%2070.png">
+    <div class="container">
+        <div class="banner_area">
+            <img src="image/Banner.png" alt="Snow" style="width:100%;">
+            <div class="overlay"></div>
+            <div class="banner_text">
+                <h6>Happy New Year</h6>
+                <h2>New Year Party Celebration</h2>
             </div>
         </div>
+        <div class="discount_area">
+            <h2>65% OFF</h2>
+            <p>Our Holiday Deals Are Better</p>
+            <h4>All Categories</h4>
+            <img src="image/New%20Year%20Photo.png">
+        </div>
+        <div class="section3">
+            <img src="image/Vectorrr.png">
+            <div class="overlay"></div>
+            <div class="content-wrapper">
+                <div class="textarea">
+                    <h2>Welcome to <br> midnight party</h2>
+                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="yearArea">
+                    <img src="image/Group%2070.png">
+                </div>
+            </div>
+        </div>
+        <div class="section4">
+            <h3><span>Place :</span> New Park Hotel</h3>
+            <h3><span>Date :</span> 31 December Night 2023</h3>
+            <h3><span>Time :</span> Evening 7.30 Pm To 12.30Am</h3>
+            <button>JOIN NOW</button>
+        </div>
+
+        <div class="section5">
+            <div class="part1">
+                <h4>NEW BEST OFFER</h4>
+                <h2>Coming Soon</h2>
+                <span>Dolor sit amet consectetur. Consequatget <br> consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut
+                    <br>pellentesque vel euismod.
+                </span>
+            </div>
+            <div class="part2">
+                <img src="image/Ellipse%201.png">
+            </div>
+            <div class="part3">
+                <h2>2024</h2>
+                <span>Dolor sit amet consectetur.<br>Consequat eget consectetur<br> maecenas sed</span>
+                <img src="image/Group%2096.png">
+            </div>
+        </div>
+        <div class="section6">
+            <span>WHAT IS FUNCTIONAL</span>
+            <h1 style="font-size: 50px"><span style="color: red">Holidays</span> Sale 50%</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id<br>
+            fermentum amet amet sit consectetur.</p>
+            <div class="image_area">
+                <div class="image1">
+                    <img src="image/Group%2075.png">
+                </div>
+                <div class="image2">
+                    <img src="image/Group%2044.png">
+                </div>
+                <div class="image3">
+                    <img src="image/Rectangle%201.png">
+                </div>
+            </div>
+            <div class="image4">
+                <img src="image/Rectangle%202.png">
+            </div>
+        </div>
+        <div class="section7">
+            <span>THE BEST GIFTS</span>
+            <h2>Our Awesome Portfolio</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br>
+                Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <img src="image/Rectangle%203.png">
+            <img src="image/Rectangle%204.png">
+            <img src="image/Rectangle%205.png">
+            <img src="image/Rectangle%206.png">
+            <img src="image/Rectangle%207.png">
+            <img src="image/Rectangle%208.png">
+        </div>
+        <div class="newslater">
+            <img src="image/Group%2061.png">
+            <h2>Subscribe Newsletter</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.<br>
+                Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <div class="inputSearch">
+                <input type="email" placeholder="user@gmail.com">
+                <button>Subscribe</button>
+            </div>
+        </div>
     </div>
-    <div class="section4">
-        <h3><span>Place :</span> New Park Hotel</h3>
-        <h3><span>Date :</span> 31 December Night 2023</h3>
-        <h3><span>Time :</span> Evening 7.30 Pm To 12.30Am</h3>
-        <button>JOIN NOW</button>
-    </div>
-</div>
+    <footer>
+        <div class="footer">
+            <div class="footer1">
+                <div class="leftSide">
+                    <span>44, Big Building Roosevelt Street<br>Beach Gardens Florida 33410 </span>
+                </div>
+                <div class="rightSide">
+                    <div class="phone">
+                        <img src="image/Call.png">
+                        <span>+00 123 584 124</span>
+                    </div>
+                    <div class="website">
+                        <img src="image/Website.png">
+                        <a href="#">www.website.com</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer2">
+                <img src="image/Facebook.png">
+                <img src="image/Instagram.png">
+                <img src="image/Twitter.png">
+                <img src="image/Linkedin.png">
+            </div>
+            <div class="footer3">
+                <div class="leftSide">
+                    <span>2017, All Rights Reserved</span>
+                </div>
+                <div class="rightSide">
+                    <span>Unsubscribe</span>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
